--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     <!-- 3D Visualizer Section -->
     <section id="visualizer-section">
         <div id="atom-container"></div>
-        <div class="headline">digitalconfvisions</div>
+        <div class="headline">confvisions</div>
     </section>
     
     <!-- Mobile Sidebar with Tabs -->
