--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
       align-items: center;
       justify-content: center;
       background: rgba(255,255,255,0.1);
-      transition: transform 0.3s ease, background 0.3s ease;
     }
 
     .social-link:hover {
@@ -186,7 +185,8 @@
       background: var(--accent);
     }
   </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <!-- Font Awesome (updated to latest version to support X icon) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
@@ -202,10 +202,10 @@
     <a href="https://wa.me/919372035409?text=Hi%20Pritam%2C%20I%20saw%20your%204D%20Webpage%20and%20I'm%20interested%20in%20your%20services!" class="link"><i class="fab fa-whatsapp"></i> Chat on WhatsApp</a>
 
     <div class="social-links">
-      <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/in/pritam-jagtap-00010b216?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/PRITYAA379" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/" class="social-link"><i class="fab fa-instagram"></i></a>
+      <a href="https://x.com/Prityaa379?t=1wZ0UV_K_9DzXa_-y3_qSw&s=09" class="social-link" title="Follow me on X"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/pritam-jagtap-00010b216?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/PRITYAA379" class="social-link"><i class="fab fa-github"></i></a>
     </div>
 
     <!-- Contact Form -->
