--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
   
   <div class="container" id="main-container">
     <div class="profile-img-container">
-      <img src="https://i.ibb.co/6RxCcJ9F/Screenshot-2025-06-12-23-22-47-38-1c337646f29875672b5a61192b9010f9-1.jpg" class="profile-img" alt="Pritam">
+      <img src="https://i.ibb.co/WV5g5H1/image.jpg" class="profile-img" alt="Pritam">
       <div class="profile-img-mirror"></div>
     </div>
     
