--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     </div>
 
     <div class="mirror-container">
-      <a href="upcoming-books.html" class="link"><i class="fas fa-book"></i> Upcoming Books</a>
+      <a href="https://prityaa379.github.io/Upcomingebook/" class="link" target="_blank"><i class="fas fa-book"></i> Upcoming Books</a>
       <div class="mirror-reflection"></div>
     </div>
 
