--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     </div>
     
     <div class="mirror-container">
-      <a href="https://jagtappritam7.gumroad.com/l/pvoryz" class="link" target="_blank"><i class="fas fa-store"></i> Start Gumroad with Me</a>
+      <a href="https://jagtappritam7.gumroad.com/l/npjvdt" class="link" target="_blank"><i class="fas fa-store"></i> Start Gumroad with Me</a>
       <div class="mirror-reflection"></div>
     </div>
     
