--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
           <div class="gumroad-submenu">
             <button class="gumroad-submenu-btn"><i class="fas fa-star"></i> Subscriptions <i class="fas fa-caret-down"></i></button>
             <div class="gumroad-submenu-content">
-              <a href="https://gumroad.com/PRITYAA379/subscriptions" target="_blank"><i class="fas fa-gem"></i> Premium Content</a>
+              <a href="https://jagtappritam7.gumroad.com/l/npjvdt" target="_blank"><i class="fas fa-gem"></i> Gumroad Subscription</a>
               <a href="https://gumroad.com/PRITYAA379/membership" target="_blank"><i class="fas fa-crown"></i> Membership</a>
               <a href="https://gumroad.com/PRITYAA379/newsletter" target="_blank"><i class="fas fa-newspaper"></i> Newsletter</a>
             </div>
@@ -707,9 +707,11 @@
           <div class="gumroad-submenu">
             <button class="gumroad-submenu-btn"><i class="fas fa-box-open"></i> Products <i class="fas fa-caret-down"></i></button>
             <div class="gumroad-submenu-content">
-              <a href="https://gumroad.com/PRITYAA379#products" target="_blank"><i class="fas fa-paint-brush"></i> Digital Art</a>
-              <a href="https://gumroad.com/PRITYAA379#products" target="_blank"><i class="fas fa-book"></i> E-books</a>
-              <a href="https://gumroad.com/PRITYAA379#products" target="_blank"><i class="fas fa-code"></i> Templates</a>
+              <a href="https://jagtappritam7.gumroad.com/l/uplaw" target="_blank"><i class="fas fa-question-circle"></i> What is Gumroad?</a>
+              <a href="https://jagtappritam7.gumroad.com/l/qnsim" target="_blank"><i class="fas fa-link"></i> LINK IN BIO SAMPLES</a>
+              <a href="https://jagtappritam7.gumroad.com/l/qkevcg" target="_blank"><i class="fas fa-calendar-check"></i> Daily Productivity Planner</a>
+              <a href="https://jagtappritam7.gumroad.com/l/tdnocf" target="_blank"><i class="fas fa-chart-line"></i> Top 10 Digital Assets in India</a>
+              <a href="https://jagtappritam7.gumroad.com/l/pvoryz" target="_blank"><i class="fas fa-download"></i> Start Gumroad for Free</a>
             </div>
           </div>
           <a href="https://gumroad.com/PRITYAA379" target="_blank"><i class="fas fa-store-alt"></i> Visit My Store</a>
